# taichi-hex

./: CONTRIBUTING.md  README.md  pyproject.toml
examples/: basic_hex.py
taichi_hex/: __init__.py  hex_attention.py
tests/: test_hex_attention.py
