[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taichi-hex"
version = "0.1.0"
description = "Hexagonal Self-Attention with C6 Symmetry — sparse diagonal masking per head, full coverage together"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
all = ["taichi-hex[dev]"]
